user model created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=MyProject
+
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/CollabHub_db
+spring.datasource.username=postgres
+spring.datasource.password=1604aman
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.security.user.name = aman
+spring.security.user.password = 1234
+
+#browser wont send session cookie if its not from the original site, csrf prevention
+spring.jpa.hibernate.ddl-auto=update
